--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,10 +10,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.4", features = [] }
+tauri-build = { version = "2.0.0-alpha.8", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = ["shell-open"] }
+tauri = { version = "2.0.0-alpha.14", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sqlite = "0.31.1"
@@ -22,3 +22,6 @@ sqlite = "0.31.1"
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[lib]
+crate-type = ["staticlib", "cdylib", "rlib"]
