--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "test",
-  "private": true,
+  "name": "vite-template-solid",
   "version": "0.0.0",
-  "type": "module",
+  "description": "",
   "scripts": {
-    "dev": "vite --host",
+    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "tauri": "tauri"
+    "serve": "vite preview",
+    "tauri": "tauri",
+    "tauridevarm": "tauri dev --target aarch64-pc-windows-msvc"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@tauri-apps/cli": "^1.5.9",
+    "solid-devtools": "^0.27.3",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9",
+    "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.0-alpha.8"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "@tauri-apps/cli": "^2.0.0-alpha.16",
-    "@tsconfig/svelte": "^5.0.0",
-    "internal-ip": "^8.0.0",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.6",
-    "svelte-preprocess": "^5.0.0",
-    "tslib": "^2.6.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.4"
+    "@tauri-apps/api": "^1.5.3",
+    "solid-js": "^1.7.6"
   }
 }
